# cuda_debug_example

./: CMakeLists.txt  main.cu
